--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -1,5 +1,6 @@
 .banner {
   color: white;
+  background: $blue;
   text-align: center;
   height: 100vh;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
@@ -19,4 +20,10 @@
   color: rgb(255, 255, 255);
   opacity: 0.6;
   margin-bottom: 30px;
+}
+.banner a {
+  color: $light-gray;
+}
+.banner a:hover{
+  color: darken($gray, 10%);
 }
